z-index fix

--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -8,7 +8,7 @@
   height: 120px;
   padding: 0 48px;
   background-color: rgba(var(--theme-main-background-rgb-top-vals), 0.8);
-  z-index: 1;
+  z-index: 999;
 }
 @media (max-width: 640px) {
   .main {
